--- a/server/pom.xml
+++ b/server/pom.xml
@@ -87,9 +87,9 @@
             <version>2.0.1.Final</version>
         </dependency>
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.4.5</version>
         </dependency>
     </dependencies>
 
