--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username= "sa"
 spring.datasource.password= ""
 
 spring.jpa.hibernate.ddl-auto= create
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.h2.console.enabled= true
 spring.h2.console.path= /h2-console
