--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name= org.h2.Driver
-spring.datasource.url= jdbc:h2:./data/test
+spring.datasource.url= jdbc:h2:./data/test;DB_CLOSE_DELAY=-1
 spring.datasource.username= "sa"
 spring.datasource.password= ""
 
