Confirmation email sent to customer when a superfrog is assigned

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.h2.console.enabled= true
 spring.h2.console.path= /h2-console
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = webtechsfscheduler@gmail.com
+spring.mail.password = asd
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+
