--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.h2.console.enabled= true
 spring.h2.console.path= /h2-console
+spring.h2.console.settings.web-allow-others=true
 
 spring.mail.host = smtp.gmail.com
 spring.mail.username = webtechsfscheduler@gmail.com
